--- a/app-dash/templates/leyout.html
+++ b/app-dash/templates/leyout.html
@@ -6,20 +6,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-	 <div class="container">
+	<nav class="navbar navbar-light bg-dark">
+	  <a class="navbar-brand">
+	    <img src="f5-networks-logo.png" width="5%" height="5%" class="d-inline-block align-top" alt="" align="left">
+	    <span class ="title">SOC Dashboard</span>
+	  </a>
+	</nav>
+	<div class="container-fluid">
  	  <div class="row">
  	   <div class="col-sm-9">
-     	    Level 1: .col-sm-9
-    	    <div class="row">
+     	    Phone login status
+<!--    	    <div class="row">
     	     <div class="col-8 col-sm-6">
               Level 2: .col-8 .col-sm-6
       	     </div>
       	     <div class="col-4 col-sm-6">
       	      Level 2: .col-4 .col-sm-6
        	     </div>
-            </div>
+</div> -->
     	   </div>
   	  </div>
 	 </div>
