--- a/app-dash/templates/styles.css
+++ b/app-dash/templates/styles.css
@@ -3,8 +3,16 @@ h1 {
 	text-align: center;
 }
 .row {
-	background-color: red;
+	background-color: white;
 	width: 100%;
 }
 .col-sm-9 {
-	background-color: white;}
+	background-color: white;
+}
+a:not([href]):not([tabindex]) {
+
+    color: white;
+    text-decoration: none;
+}
+.title {
+	font-size: 200%;}
