--- a/app-dash/templates/leyout.html
+++ b/app-dash/templates/leyout.html
@@ -16,11 +16,43 @@
 	    <span class ="title">SOC Dashboard</span>
 	  </a>
 	</nav>
-	<div class="container-fluid">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	  <a class="navbar-brand" href="leyout.html">Phone Status</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	    <div class="navbar-nav">
+	      <a class="nav-item nav-link" href="#">Add</a> 
+	      <a class="nav-item nav-link active" href="#">DDOS<span class="sr-only">(current)</span></a>
+	      <a class="nav-item nav-link" href="#">AF</a>
+	      <a class="nav-item nav-link" href="#">WAF</a>
+	      <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+	    </div>
+	  </div>
+	</nav>
+	
+	
+	
+	<!--	<div class="container-fluid">
  	  <div class="row">
- 	   <div class="col-sm-9">
-     	    Phone login status
-<!--    	    <div class="row">
+	   <div class="col-sm-9-sm-3">
+     	    Phone login status	   </div>
+	   <div class="col-sm-9-sm-2">
+	    AF
+	   </div>
+	   <div class="col-sm-9-sm-2">
+	    WAF
+	   </div>
+	   <div class="col-sm-9-sm-2">
+	    DDOS
+	   </div>
+-->		   
+		   
+		   
+		   
+		   
+		   <!--    	    <div class="row">
     	     <div class="col-8 col-sm-6">
               Level 2: .col-8 .col-sm-6
       	     </div>
@@ -34,9 +66,9 @@
 <table class="table table-dark">
   <thead>
     <tr>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Placeholder</th>
+      <th scope="col">Status</th>
+      <th scope="col">Time</th>
     </tr>
   </thead>
   <tbody>
