--- a/app-dash/templates/layout.html
+++ b/app-dash/templates/layout.html
@@ -25,7 +25,12 @@
 	      <a class="nav-item nav-link active" href="#">DDOS<span class="sr-only">(current)</span></a>
 	      <a class="nav-item nav-link" href="#">AF</a>
 	      <a class="nav-item nav-link" href="#">WAF</a>
-	      <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+	      <a class="nav-item nav-link nav" href="#">Disabled</a>
+	      <a class="nav-itme nav-link" href="#"><a>
+	      <form action="/csvread" method="post" enctype="multipart/form-data">
+		      <input type="file" name="myfile">
+		      <input type="submit" value="Submit">
+	      </form>
 	    </div>
 	  </div>
 	</nav>
