Finaly got the upload function working!

--- a/app-dash/templates/layout.html
+++ b/app-dash/templates/layout.html
@@ -27,8 +27,8 @@
 	      <a class="nav-item nav-link" href="#">WAF</a>
 	      <a class="nav-item nav-link nav" href="#">Disabled</a>
 	      <a class="nav-itme nav-link" href="#"><a>
-	      <form action="/csvread" method="post" enctype="multipart/form-data">
-		      <input type="file" name="myfile">
+	      <form action="/upload" method="post" enctype="multipart/form-data">
+		      <input type="file" name="file">
 		      <input type="submit" value="Submit">
 	      </form>
 	    </div>
